Extras: A stats endpoint
